# orange

./: .gitignore  CHANGELOG.md  Makefile  NOTE.md  README.md  checksum-Elixir.Orange.Terminal.Binding.exs  mix.exs
.github/workflows/: release-please.yml  release.yml  test.yml
benchmark/: layout_nif.exs  orange_component_tree.term  orange_input_tree.term  orange_render_output_tree.term  render_output_tree.exs  renderer_buffer.exs  to_input_tree.exs
config/: config.exs  dev.exs  test.exs
examples/: counter.ex  counter.exs  double_counter.ex  double_counter.exs  grid.exs  scrollable_rect.exs  tab_bar.exs
guides/: events-subscription.md
lib/: component.ex  layout.ex  macro.ex  orange.ex  renderer.ex  runtime.ex  terminal.ex  test.ex  types.ex
lib/component/: input.ex  list.ex  modal.ex  tab_bar.ex  table.ex  vertical_scrollable_rect.ex
lib/layout/: types.ex
lib/renderer/: buffer.ex  input_tree.ex  style.ex  types.ex
lib/runtime/: children_diff.ex  component_registry.ex  event_manager.ex  event_poller.ex  render_loop.ex
lib/terminal/: types.ex
lib/test/: assertions.ex  mock_terminal.ex  snapshot.ex
native/orange_layout_binding/: Cargo.toml  README.md
native/orange_layout_binding/src/: lib.rs  text_utils.rs
native/orange_terminal_binding/: Cargo.toml  README.md
native/orange_terminal_binding/src/: lib.rs
test/: macro_test.exs  orange_test.exs  renderer_test.exs
test/component/: input_test.exs  list_test.exs  modal_test.exs  tab_bar_test.exs  table_test.exs  vertical_scrollable_rect_test.exs
test/renderer/: absolute_position_test.exs  (+11 more)
(+11 files in other folders)
