[package]
name = "orange_terminal_binding"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "orange_terminal_binding"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.31.0", default-features = false, features = ["derive"] }
crossterm = "0.27.0"
libc = "0.2.153"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
